@@ -1,3 +1,4 @@
 ../exult_pocketpc.flx
 keyboard.shp
 minimizedkbd.shp
+keypad.shp
