@@ -107,10 +107,7 @@ void Gamemenu_gump::quit(bool return_to_menu)
 #ifdef UNDER_CE
 		if (Yesno_gump::ask("Do you want to minimize?"))
 		{
-			//gwin->clear_screen(true);
-			minimized = true;
-			SDL_WM_IconifyWindow();
-			SDL_WM_IconifyWindow();
+			ActionMinimizeGame(NULL);
 		}
 #endif
 		return;
